--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           deno-version: v2.x
 
       - name: Build step
-        run: "echo build"
+        run: "deno install --allow-scripts"
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
