--- a/deno.json
+++ b/deno.json
@@ -2,6 +2,7 @@
   "tasks": {
     "start:dev": "deno run -A src/main.ts --watch"
   },
+  "nodeModulesDir": "auto",
   "imports": {
     "@kiyasov/platform-hono": "npm:@kiyasov/platform-hono@^1.3.11",
     "@nestjs/common": "npm:@nestjs/common@^10.4.1",
