--- a/deno.json
+++ b/deno.json
@@ -4,10 +4,15 @@
   },
   "nodeModulesDir": "auto",
   "imports": {
+    "@apollo/server": "npm:@apollo/server@^4.11.3",
+    "@nestjs/apollo": "npm:@nestjs/apollo@^13.0.4",
     "@nestjs/common": "npm:@nestjs/common@^10.4.1",
     "@nestjs/core": "npm:@nestjs/core@^10.4.1",
+    "@nestjs/graphql": "npm:@nestjs/graphql@^13.0.4",
     "@nestjs/platform-express": "npm:@nestjs/platform-express@^10.4.1",
     "@nestjs/swagger": "npm:@nestjs/swagger@^7.4.0",
+    "@std/assert": "jsr:@std/assert@^1.0.11",
+    "graphql": "npm:graphql@^16.10.0",
     "reflect-metadata": "npm:reflect-metadata@^0.2.2",
     "rxjs": "npm:rxjs@^7.8.1"
   },
