--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: Deploy
 on:
   push:
-    branches: [dev]
+    branches: [dev, template/gql-apollo-code-first]
   pull_request:
     branches: [main]
 
