--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "start:dev": "deno run -A src/main.ts --watch"
+    "start:dev": "deno run -A --watch src/main.ts"
   },
   "nodeModulesDir": "auto",
   "imports": {
@@ -9,15 +9,18 @@
     "@nestjs/common": "npm:@nestjs/common@^10.4.1",
     "@nestjs/core": "npm:@nestjs/core@^11.0.12",
     "@nestjs/graphql": "npm:@nestjs/graphql@^13.0.4",
+    "@nestjs/mapped-types": "npm:@nestjs/mapped-types@^2.1.0",
     "@nestjs/platform-express": "npm:@nestjs/platform-express@^10.4.1",
     "@nestjs/swagger": "npm:@nestjs/swagger@^11.1.0",
     "@std/assert": "jsr:@std/assert@^1.0.11",
+    "class-transformer": "npm:class-transformer@^0.5.1",
     "graphql": "npm:graphql@^16.10.0",
     "reflect-metadata": "npm:reflect-metadata@^0.2.2",
     "rxjs": "npm:rxjs@^7.8.1"
   },
   "compilerOptions": {
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "isolatedDeclarations": true
   }
 }
